--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-shop-tutorial",
+  "name": "e-shop",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,7 +10,7 @@
     "dev": "nodemon server.js",
     "start": "node server.js"
   },
-  "author": "shahriar Sajeeb",
+  "author": "dennis obel",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -23,8 +23,10 @@
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
+    "ngrok": "^5.0.0-beta.2",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
+    "request": "^2.88.2",
     "stripe": "^12.0.0"
   }
 }
