--- a/backend/package.json
+++ b/backend/package.json
@@ -23,10 +23,12 @@
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
+    "morgan": "^1.10.0",
     "ngrok": "^5.0.0-beta.2",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "request": "^2.88.2",
+    "resend": "^4.5.1",
     "stripe": "^12.0.0"
   }
 }
