Added database initialization script and setup command to package.json. Updated server.js to load environment variables from the root directory. Modified .env file to include a new local database URL and commented out the previous MongoDB connection string.

--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,5 +1,7 @@
 PORT = 8080
-DB_URL = mongodb+srv://dennisobel:Maria09092021@cluster0.xwqglyi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# DB_URL = mongodb+srv://dennisobel:Maria09092021@cluster0.xwqglyi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# Change this line in your .env file:
+DB_URL = mongodb://localhost:27017/multivendor
 JWT_SECRET_KEY = "2FxXT1NTf2K1Mo4i6AOvtdI"
 JWT_EXPIRES = 7d
 ACTIVATION_SECRET = 'PWj0fI#&DsZY9w$8tHe11*yr9F45K*j2xj&fceGZ!tEnMNZcEN'
