--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "init-db": "node scripts/init-db.js",
+    "setup": "npm run init-db && npm run dev"
   },
   "author": "dennis obel",
   "license": "ISC",
